--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "dist/app.js",
   "scripts": {
-	"start": "tsc && node dist/app.js"
-	},
+    "start": "tsc && node dist/app.js"
+  },
   "author": "Ryan Wong",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.3",
     "express": "^4.17.1",
+    "mongodb": "^3.5.5",
     "tslint": "^6.1.0",
     "typescript": "^3.8.3"
   }
