--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "mongodb": "^3.5.5",
     "tslint": "^6.1.0",
     "typescript": "^3.8.3"
+  },
+  "devDependencies": {
+    "@types/mongodb": "^3.5.2"
   }
 }
