--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.3",
+    "compression": "^1.7.4",
     "express": "^4.17.1",
+    "firebase-admin": "^8.10.0",
+    "helmet": "^3.21.3",
     "mongodb": "^3.5.5",
     "tslint": "^6.1.0",
     "typescript": "^3.8.3"
